<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="251dp"
        android:layout_height="55dp"
        android:background="#003BD1FF"
        android:gravity="clip_horizontal|center"
        android:shadowColor="#FF5722"
        android:text="@string/app_name"
        android:textColor="#FF1744"
        android:textColorHighlight="#3F51B5"
        android:textColorHint="#F44336"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="354dp"
        android:layout_height="114dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/welcome"
        android:textColor="#304FFE"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/txtloginemail"
        android:layout_width="335dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/editbox_background_normal"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/hintusername"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/txtloginpassword"
        android:layout_width="331dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/editbox_background_normal"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:elegantTextHeight="false"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/hintpassword"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtloginemail" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:text="@string/iconlogin"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtloginpassword" />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="118dp"
        android:layout_height="64dp"
        android:layout_marginBottom="99dp"
        android:text="@string/iconsignup"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toEndOf="@+id/totalreturn"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/totalreturn"
        android:layout_width="190dp"
        android:layout_height="24dp"
        android:text="@string/newuser"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.297" />

</androidx.constraintlayout.widget.ConstraintLayout>

